# rust-food-app

./: README.md
food-app-engine/: Cargo.toml
food-app-engine/data/: ingredient_types.yml  measurement_types.yml  recipes.yml
food-app-engine/data/recipes/: beyond_meat_burger.yml  matter_paneer.yml  oyster_beef.yml
food-app-engine/src/: main.rs
food-app-engine/src/ingredients/: ingredients_map.rs  mod.rs  processes.rs
food-app-engine/src/recipes/: data.rs  mod.rs
food-app-engine/src/recipes/structs/: ingredient.rs  ingredient_type.rs  mod.rs  recipe.rs  step.rs
